add quotes svg for desktop

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <section class="testimonial__container">
       <article class="testimonial">
+        <img id="quotes" src="images/bg-pattern-quotation.svg" alt="" />
         <div class="testimonial__author">
           <img
             class="testimonial__author__img"
